# kalshi-macro-forecaster

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml
.beads/: config.yaml  metadata.json
.cursor/rules/: beads.mdc
data/static/: fomc_meeting_dates.txt
docs/: data_spec.md  phase_1_5_kalshi_research.md
scripts/: inspect_db.py
src/kalshi_train/: __init__.py  cli.py  config.py
src/kalshi_train/data/: __init__.py  calendar_registry.py  fomc_calendar.py  ingest_fred.py  ingest_kalshi.py  ingest_spf.py  kalshi_classifier.py  registry.py  spf_registry.py
src/kalshi_train/data/sources/: __init__.py  fred.py  kalshi.py  kalshi_models.py  spf.py
src/kalshi_train/db/: __init__.py  connection.py  ingest.py  point_in_time.py  schema.sql
src/kalshi_train/eval/: __init__.py  metrics.py  splits.py
src/kalshi_train/features/: __init__.py  base.py  fed_cut.py
src/kalshi_train/models/: __init__.py  xgboost_baseline.py
src/kalshi_train/scripts/: __init__.py  init_db.py
src/kalshi_train/targets/: __init__.py  fed_cut.py
src/kalshi_train/trading/: __init__.py
src/kalshi_train/training/: __init__.py  phase2_fed_cut.py
tests/: conftest.py
tests/integration/: test_fred_live.py  test_spf_live.py
tests/unit/: test_fred_client.py  test_ingest_fred.py  test_ingest_kalshi.py  test_ingest_spf.py  test_kalshi_classifier.py  test_phase2_fed_cut.py  test_point_in_time.py  test_point_in_time_properties.py  test_smoke.py  test_spf_client.py
