[project]
name = "kalshi-train"
version = "0.0.1"
description = "Fine-tune an LLM to forecast Kalshi macro markets, evaluated against classical ML, vanilla LLM, and market baselines."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Emilija Tashevska" }]

dependencies = [
    # HTTP + async
    "httpx>=0.27",
    "aiosqlite>=0.20",
    "tenacity>=8.5",
    # Data validation / settings
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "python-dotenv>=1.0",
    # Data wrangling
    "pandas>=2.2",
    "numpy>=1.26",
    "pyarrow>=16.0",
    # CLI
    "typer>=0.12",
    "rich>=13.7",
    # DB browsing UI (Phase 0)
    "datasette>=0.64",
    "openpyxl>=3.1.5",
]

[project.optional-dependencies]
# These get installed as we enter the relevant phases. Keeping Phase 0
# install fast and minimal.
data-sources = [
    "fredapi>=0.5",
    "beautifulsoup4>=4.12",
    "lxml>=5.2",
    "feedparser>=6.0",
]
ml = [
    "scikit-learn>=1.5",
    "xgboost>=2.1",
    "matplotlib>=3.9",
    "seaborn>=0.13",
    "shap>=0.46",
]
llm = [
    "openai>=1.40",
    "anthropic>=0.34",
]
finetune = [
    "torch>=2.4",
    "transformers>=4.44",
    "peft>=0.12",
    "trl>=0.10",
    "datasets>=2.21",
    "accelerate>=0.34",
    "bitsandbytes>=0.43; sys_platform != 'darwin'",
    "wandb>=0.17",
]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "hypothesis>=6.111",
    "ruff>=0.6",
    "mypy>=1.11",
    "pre-commit>=3.8",
    "ipykernel>=6.29",
    "jupyterlab>=4.2",
]

[project.scripts]
kalshi-train = "kalshi_train.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kalshi_train"]

# ───────────────────────────── ruff ─────────────────────────────
[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests", "scripts"]

[tool.ruff.lint]
# Sensible defaults. We're aggressive about quality from day one.
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # bugbear
    "C4",   # comprehensions
    "UP",   # pyupgrade
    "RUF",  # ruff-specific
    "SIM",  # simplify
    "TID",  # tidy imports
    "PL",   # pylint subset
    "PT",   # pytest style
    "RET",  # return values
]
ignore = [
    "PLR0913", # too many arguments — common in data ingestion
    "PLR2004", # magic values — we have a lot of "magic" thresholds
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["PLR2004", "S101", "PT018"]  # PT018: tests often combine sanity-checks
"scripts/**/*.py" = ["T201"]  # allow print() in scripts
# The series registry is a deliberately table-formatted data file —
# columns get wrapped to keep series_id, title, category visually aligned.
"src/kalshi_train/data/registry.py" = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ───────────────────────────── mypy ─────────────────────────────
[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
show_error_codes = true
plugins = ["pydantic.mypy"]
files = ["src/kalshi_train"]

[[tool.mypy.overrides]]
module = [
    "fredapi.*",
    "datasette.*",
    "shap.*",
    "xgboost.*",
    "wandb.*",
    "trl.*",
    "peft.*",
    "pandas",
    "pandas.*",
    "sklearn",
    "sklearn.*",
]
ignore_missing_imports = true

# ───────────────────────────── pytest ─────────────────────────────
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--showlocals",
    "--tb=short",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests requiring network",
]

# ───────────────────────────── coverage ─────────────────────────────
[tool.coverage.run]
branch = true
source = ["src/kalshi_train"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
